NLPTwitterToolbox cleanup